spacings fixed

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,6 +24,7 @@ p{
 
 }
 
+
 #button{
   font-family: 'Rowdies',bold;
 }
@@ -125,9 +126,10 @@ p{
   height: 700px;
 }
 
+/*all sections vertical spacing*/
 .about-title{
-  margin-bottom: 120px;
-  margin-top: 220px;
+  margin-bottom: 100px;
+  margin-top: 120px;
   font-family: 'Rowdies',bold;
   
   
